# framework

./: .gitignore  .gitmodules  Cargo.toml
beacon_fork_choice/: Cargo.toml
beacon_fork_choice/src/: genesis.rs  lib.rs  state_transition.rs  store.rs
beacon_node/: Cargo.toml
beacon_node/src/: main.rs  node.rs  runtime_config.rs  slot_timer.rs
core/src/: consts.rs
eth2_network/src/: lib.rs
eth2_network_libp2p/: Cargo.toml
eth2_network_libp2p/src/: lib.rs
helper_functions/: Cargo.toml
helper_functions/helper_functions_1/: Cargo.toml
helper_functions/helper_functions_1/src/: beacon_state_accessors.rs  beacon_state_mutators.rs  crypto.rs  math.rs  misc.rs  predicates.rs
helper_functions/helper_functions_2/: Cargo.toml
helper_functions/helper_functions_2/src/: beacon_state_accessors.rs  beacon_state_mutators.rs  crypto.rs  math.rs  misc.rs  predicates.rs
helper_functions/helper_functions_interface/: Cargo.toml
helper_functions/helper_functions_interface/src/: beacon_state_accessors.rs  beacon_state_mutators.rs  crypto.rs
helper_functions/src/: beacon_state_accessors.rs  beacon_state_mutators.rs  crypto.rs  error.rs  lib.rs  math.rs  misc.rs  predicates.rs
scripts/: ci  interop_minimal_genesis_state.yaml.erb  lighthouse_interop.bash
spec_test_utils/: Cargo.toml
spec_test_utils/src/: lib.rs
transition_functions/: Cargo.toml  output_16
transition_functions/src/: lib.rs  process_slot.rs  spec_test_utils.rs  state_builder.rs  state_comparator.rs
transition_functions/src/attestations/: attestations.rs  mod.rs
transition_functions/src/block_processing/: mod.rs
transition_functions/src/blocks/: block_processing.rs
transition_functions/src/epochs/: process_epoch.rs
transition_functions/src/rewards_and_penalties/: mod.rs  rewards_and_penalties.rs
types/: Cargo.toml
types/src/: beacon_state.rs  config.rs  consts.rs  error.rs  helper_functions_types.rs  lib.rs  primitives.rs  slot_epoch_macros.rs  types.rs
utils/bls/: Cargo.toml
utils/bls/src/: aggregate_public_key.rs  aggregate_signature.rs  fake_aggregate_signature.rs  fake_public_key.rs  fake_signature.rs  keypair.rs  lib.rs  macros.rs  public_key.rs  public_key_bytes.rs  secret_key.rs  signature.rs  signature_bytes.rs  signature_set.rs
utils/eth2_hashing_new/: Cargo.toml
utils/eth2_hashing_new/src/: lib.rs
utils/misc/: Cargo.toml
utils/misc/src/: lib.rs
utils/ssz_new/: Cargo.toml
utils/ssz_new/src/: decode.rs  encode.rs  lib.rs  utils.rs
utils/ssz_new/src/types/: bitfield.rs  fixed_vector.rs  mod.rs  variable_list.rs
utils/ssz_new/tests/: tests.rs
utils/ssz_new_derive/: Cargo.toml
utils/ssz_new_derive/src/: lib.rs
