[workspace]
members = [
    'beacon_fork_choice',
    'beacon_node',
    'error_utils',
    'eth2_network',
    'eth2_network_libp2p',
    'spec_test_utils',
    'types',
    'transition_functions',
    'helper_functions/helper_functions_2',
    'utils/ssz_new',
    'utils/ssz_new_derive',
    'utils/bls'
]

[profile.release]
overflow-checks = true

[patch]
[patch.crates-io]
tree_hash = { git = 'https://github.com/sigp/lighthouse' }
tree_hash_derive = { git = 'https://github.com/sigp/lighthouse' }
eth2_ssz = { git = 'https://github.com/sigp/lighthouse' }
eth2_ssz_derive = { git = 'https://github.com/sigp/lighthouse' }
eth2_ssz_types = { git = 'https://github.com/sigp/lighthouse' }
eth2_hashing = { git = 'https://github.com/sigp/lighthouse' }