[workspace]
members = [
    'beacon_fork_choice',
    'beacon_node',
    'error_utils',
    'eth2_network',
    'eth2_network_libp2p',
    'spec_test_utils',
    'types',
    'transition_functions',
    'utils/ssz_new',
    'utils/ssz_new_derive',
    'utils/bls'
]

[profile.release]
overflow-checks = true

[patch.crates-io]
# We have to override these because Lighthouse does it for some reason.
eth2_hashing     = { git = 'https://github.com/sigp/lighthouse' }
eth2_ssz         = { git = 'https://github.com/sigp/lighthouse' }
eth2_ssz_derive  = { git = 'https://github.com/sigp/lighthouse' }
eth2_ssz_types   = { git = 'https://github.com/sigp/lighthouse' }
tree_hash        = { git = 'https://github.com/sigp/lighthouse' }
tree_hash_derive = { git = 'https://github.com/sigp/lighthouse' }

# Unlike the crates above, these do not need to be overridden, but we do it
# anyway in case we need to depend on a specific commit from Lighthouse in the
# future.
eth2-libp2p      = { git = 'https://github.com/sigp/lighthouse' }
merkle_proof     = { git = 'https://github.com/sigp/lighthouse' }
serde_hex        = { git = 'https://github.com/sigp/lighthouse' }

# This can be used to switch between the two helper function implementations.
# Using `package` in the `[patch]` section does not actually result in the crate
# being renamed. To make this work, all implementations must have the same name.
# As a result, they cannot be included in `workspace.members`.
helper_functions = { path = 'helper_functions/helper_functions_2' }
