[package]
name = 'eth2_network_libp2p'
version = '0.1.0'
edition = '2018'

[dependencies]
anyhow = '1.0.25'
error_utils = { path = '../error_utils' }
eth2-libp2p = '0.1.0'
eth2_network = { path = '../eth2_network' }
ssz_new = { path = '../utils/ssz_new' }
ethereum-types = '0.8.0'
fmt-extra = '0.2.1'
futures = '0.1.29'
helper_functions = '0.1.0'
log = '0.4.8'
qutex = '0.2.3'
slog = '2.5.2'
slog-stdlog = '4.0.0'
thiserror = '1.0.9'
types = { path = '../types' }
