[package]
name = 'transition_functions'
version = '0.1.0'
authors = ['pikaciu22x <bratcikov@gmail.com>']
edition = '2018'

[dependencies]
bls = { path = '../utils/bls' }
integer-sqrt = '0.1'
itertools = '0.8'
eth2_ssz_types = '0.2.0'
merkle_proof = '0.1.0'
helper_functions = '0.1.0'
log = '0.4'
tree_hash = '0.1.1'
tree_hash_derive = '0.2.0'
typenum = '1.11.2'
types = { path = '../types' }
rayon = '1.0'
ethereum-types = '0.6'
mockall = '0.5.2'

[dev-dependencies]
ssz_new = { path = '../utils/ssz_new' }
spec_test_utils = { path = '../spec_test_utils' }
test-generator = '0.3.0'
void = '1.0.2'
