[package]
name = 'types'
version = '0.1.0'
authors = ['Saulius Grigaitis <saulius@dist.lt>']
edition = '2018'

[dependencies]
bls = { path = '../utils/bls' }
derive_more = '0.99.2'
ethereum-types = '0.8'
serde = { version = '1.0', features = ['derive']}
generic-array = { version = '0.13.2', features = ['serde'] }
typenum = '1.11.2'
ssz_new = { path = '../utils/ssz_new' }
ssz_new_derive = { path = '../utils/ssz_new_derive' }
eth2_ssz_types = { git = 'https://github.com/sigp/lighthouse' }
tree_hash = { git = 'https://github.com/sigp/lighthouse' }
tree_hash_derive = { git = 'https://github.com/sigp/lighthouse' }

[dev-dependencies]
spec_test_utils = { path = '../spec_test_utils' }
test-generator = '0.3.0'
