[package]
name = 'types'
version = '0.1.0'
authors = ['Saulius Grigaitis <saulius@dist.lt>']
edition = '2018'

[dependencies]
bls = '0.1.0'
derive_more = '0.99.2'
ethereum-types = '0.8'
serde = { version = '1.0', features = ['derive']}
generic-array = { version = '0.13.2', features = ['serde'] }
typenum = '1.11.2'
eth2_ssz = '0.1.2'
eth2_ssz_derive = '0.1.0'
eth2_ssz_types = '0.2.0'
tree_hash = '0.1.1'
tree_hash_derive = '0.2.0'

[dev-dependencies]
spec_test_utils = { path = '../spec_test_utils' }
test-generator = '0.3.0'
