[package]
name = "ssz_new"
version = "0.1.2"
authors = ["Faustas <faustas.butkus@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ssz_new"

[dependencies]
typenum = "1.10"
ethereum-types = "0.8"
ssz_new_derive = { path = "../ssz_new_derive" }
eth2_ssz_types = { git = "https://github.com/sigp/lighthouse" }